SERVER-36070: Generate audit BSONObjs which match serialization logic

GitOrigin-RevId: 0cb1a69acc5ce7a67a4241e75d23b2f5b68fafe0